--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
+    "ecmaVersion": 2018,
+    "sourceType": "module"
   },
   "extends": "eslint:recommended",
   "env": {
@@ -11,10 +11,16 @@
     "node": true
   },
   "rules": {
-      "semi": 1,
-      "indent": ["warn", 2],
-      "no-debugger": "warn",
-      "no-unused-vars": "warn",
-      "no-extra-semi": "warn"
+    "semi": 1,
+    "indent": [
+      "warn",
+      2
+    ],
+    "no-debugger": "warn",
+    "no-unused-vars": "warn",
+    "no-extra-semi": "warn"
+  },
+  "globals": {
+    "process": true
   }
 }
